--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               </svg>
             </div>
             <div class="image-container">
-              <img src="img/me-alone2.png" alt="Descripción de la imagen" />
+              <img src="me-alone2.png" alt="Descripción de la imagen" />
             </div>
           </div>
           <div class="introduccion col-sm-4 col-md-3 col-lg-3">
@@ -272,7 +272,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <a target="_blank" href="https://www.colsubsidio.com"
-                ><img src="img/colsub.png" class="d-block w-100" alt="..."
+                ><img src="colsub.png" class="d-block w-100" alt="..."
               /></a>
               <div class="carousel-caption d-none d-md-block">
                 <h5>Colsubsidio Personas</h5>
@@ -285,7 +285,7 @@
             <div class="carousel-item">
               <a target="_blank" href="https://www.colsubsidio.com/empresas"
                 ><img
-                  src="img/colsub_empresa.png"
+                  src="colsub_empresa.png"
                   class="d-block w-100"
                   alt="..."
               /></a>
@@ -299,7 +299,7 @@
             </div>
             <div class="carousel-item">
               <a target="_blank" href="https://www.piscilago.co"
-                ><img src="img/psicilago.png" class="d-block w-100" alt="..."
+                ><img src="psicilago.png" class="d-block w-100" alt="..."
               /></a>
               <div class="carousel-caption d-none d-md-block">
                 <h5>Piscilago</h5>
@@ -311,7 +311,7 @@
             </div>
             <div class="carousel-item">
               <a target="_blank" href="https://www.hotelescolsubsidio.com"
-                ><img src="img/hoteles.png" class="d-block w-100" alt="..."
+                ><img src="hoteles.png" class="d-block w-100" alt="..."
               /></a>
               <div class="carousel-caption d-none d-md-block">
                 <h5>Colsubsidio Hoteles</h5>
