--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </li>
               </ul>
             </div>
-            <div class="btn"><button>CONTACTAR</button></div>
+            <div class="btn"><a href="#contact-us"><button>CONTACTAR</button></a></div>
           </div>
           <div class="imgs col-sm-8 col-md-6 col-lg-5">
             <div class="svgs">
