--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
           <div class="socials">
             <a
               target="_blank"
-              href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSGLrVnMShlTgbSdGZmKKfVSmplmWWjhRBdFpVwzlCJDPGwwzvvTlVDfBGlWpNnZvCFcVpdM"
+              href="mailto:julianandresa8@gmail.com"
             >
               <button>
                 <svg
@@ -380,7 +380,7 @@
                 >&nbsp;&nbsp;&nbsp; e-mail
               </button>
             </a>
-            <a target="_blank" href="https://wa.me/+573046379758">
+            <a target="_blank" href="https://wa.me/+573116784720">
               <button>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -398,7 +398,7 @@
             </a>
             <a
               target="_blank"
-              href="https://www.linkedin.com/in/julian-andres-arango-rengifo-8061451b4/"
+              href="https://www.linkedin.com/in/julian-a-8061451b4/"
             >
               <button>
                 <svg
